Fix overflow

--- a/dev/assets/less/structure.less
+++ b/dev/assets/less/structure.less
@@ -63,7 +63,7 @@ body {
 
 .main-header {
     padding: 40/@em 25/@em;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
     background: url(../img/bg-overlay.png);
     color: rgba(255, 255, 255, .5);
